Kubernetes/1-kubernetes-resources/11-networkpolicy/2-example/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: a
  labels:
    name: a
---
apiVersion: v1
kind: Namespace
metadata:
  name: b
  labels:
    name: b
