Kubernetes/1-kubernetes-resources/11-networkpolicy/2-example/4-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: c
  labels:
    name: c
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-c
  namespace: c
  labels:
    app: pod-c
spec:
  containers:
  - name: nginx
    image: nginx
